# raccoochat

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  PythonClient.py  README.md  cleanup.sh  cmake_install.cmake  old_client.py  raccoochat.thrift  test_gflag.cpp  tutorial.thrift
gen-cpp/: CppRacconChat.cpp  CppRacconChat.h  CppServer.cpp  MakeFile.md  RacconChat.cpp  RacconChat.h  RaccooChat.cpp  RaccooChatServer.cpp  RaccooChatServer.h  raccoochat_types.cpp  server  server.cpp  tutorial_constants.cpp  tutorial_constants.h  tutorial_types.cpp  tutorial_types.h
gen-py/raccoochat/: RaccooChat.py  ttypes.py
gen-py/tutorial/: RacconChat-remote  RacconChat.py  __init__.py  ttypes.py
raccoochat/: DataBase.h  DeserializationUtils.cpp  FileDataBase.cpp  FileDataBase.h  MessageUtils.cpp  MessageUtils.h  RaccooChatClient.py  RaccooChatDB.cpp  RaccooChatDB.h  RaccooChatFileDB.cpp  RaccooChatFileDB.h  RaccooChatServer.cpp  RaccooChatServer.h  RaccooChatTools.cpp  RaccooChatTools.h  RaccooChatUser.cpp  RaccooChatUser.h  SerializationUtils.cpp  Tools.cpp  Tools.h  UserUtils.cpp  UserUtils.h  client.py  old_client.py  raccoochat.thrift  server.cpp
raccoochat/DataBaseRC/: RC_chat.txt  RC_users.txt  messages.txt  private_messages.txt  users.txt
raccoochat/gen-cpp/: RaccooChat.cpp  RaccooChat.h  RaccooChat_server.skeleton.cpp  raccoochat_constants.cpp  raccoochat_constants.h  raccoochat_types.cpp  raccoochat_types.h
raccoochat/gen-py/raccoochat/: RaccooChat-remote  RaccooChat.py  __init__.py  constants.py  ttypes.py
raccoochat/test/: SimpleTest.cpp
test/: SimpleTest
